# projectsWorking

./: Queue.txt
AsyncCpp/: CMakeLists.txt
AsyncCpp/include/Async/: async.hpp
AsyncCpp/src/: CMakeLists.txt  main  main.cpp
AsyncCpp/src/Async/: CMakeLists.txt  async.cpp
GHS/: CMakeLists.txt  README.txt  buildData.sh  partitions_custom.csv  platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old
GHS/buildData/: buildKeys.sh  crc32Calc.cpp  gencrc
GHS/buildData/OTAserver/: package-lock.json  server.js
GHS/buildData/keys/: private_key.pem  public_key.pem
GHS/components/mdns/: CMakeLists.txt
GHS/data/: app0firmware.sig  app1firmware.sig  firmware.sig
GHS/include/: config.hpp
GHS/include/Bootload/: firmwareVal.hpp
GHS/include/Common/: FlagReg.hpp  Timing.hpp  heartbeat.hpp
GHS/include/Config/: config.hpp
GHS/include/Drivers/: ADC.hpp  AS7341_Library.hpp  DHT_Library.hpp  SHT_Library.hpp  SSD1306_Library.hpp  fonts.hpp
GHS/include/FirmwareVal/: firmwareVal.hpp
GHS/include/I2C/: I2C.hpp
GHS/include/NVS/: NVS.hpp  NVSconfig.hpp
GHS/include/NVS2/: NVS.hpp
GHS/include/Network/: NetConfig.hpp  NetCreds.hpp  NetMain.hpp  NetManager.hpp  NetSTA.hpp  NetWAP.hpp  Routes.hpp  Socket.hpp  webPages.hpp
GHS/include/OTA/: OTAupdates.hpp
GHS/include/Peripherals/: Alert.hpp  Averages.h  Light.hpp  Relay.hpp  Report.hpp  Soil.hpp  TempHum.hpp  saveSettings.hpp
GHS/include/Threads/: Mutex.hpp  ThreadParameters.hpp  ThreadTasks.hpp  Threads.hpp
GHS/include/UI/: Display.hpp  IDisplay.hpp  MsgLogHandler.hpp  SSD1306_Library.hpp  fonts.hpp
GHS/src/: CMakeLists.txt  Config.cpp  main.cpp
GHS/src/Bootload/: CMakeLists.txt  firmwareVal.cpp
GHS/src/Common/: CMakeLists.txt  FlagReg.cpp  Timing.cpp  heartbeat.cpp
GHS/src/Config/: CMakeLists.txt  Config.cpp
GHS/src/Drivers/: ADC.cpp  AS7341_Library.cpp  CMakeLists.txt  DHT_Library.cpp  SHT_Library.cpp  SSD1306_Library.cpp  fonts.hpp
GHS/src/Drivers/AS7341/: AS7314SetReg.cpp  AS7341ConfigEnable.cpp  AS7341GetReg.cpp  AS7341RegisterIO.cpp  AS7341_Library.cpp
GHS/src/FirmwareVal/: firmwareVal.cpp
GHS/src/I2C/: CMakeLists.txt  I2C.cpp
GHS/src/NVS/: CMakeLists.txt  NVS .cpp  NVS.cpp  NVSchecksum.cpp  NVSread.cpp  NVSwrite.cpp
GHS/src/NVS2/: Checksum.cpp  NVS.cpp  NVSSafeOpen.cpp  NVSread.cpp  NVSwrite.cpp
GHS/src/Network/: CMakeLists.txt  NetConfig.cpp  NetCreds.cpp  NetMain.cpp  NetManager.cpp  NetSTA.cpp  NetWAP.cpp  Routes.cpp  Socket.cpp
GHS/src/Network/Handlers/: CMakeLists.txt  MasterHandler.cpp  STA.cpp  STAHandler.cpp  STAOTA.cpp  STAOTAHandler.cpp  WAP.cpp  WAPHandler.cpp  WAPsetup.cpp  WAPsetupHandler.cpp  socketCmdHandler.cpp  socketHandler.cpp
GHS/src/OTA/: CMakeLists.txt  LAN.cpp  OTALAN.cpp  OTAWEB.cpp  OTAmain.cpp  OTAupdates.cpp  WEB.cpp  main.cpp
GHS/src/Peripherals/: Alert.cpp  Averages.cpp  Light.cpp  Relay.cpp  Report.cpp  Soil.cpp  TempHum.cpp  saveSettings.cpp
GHS/src/Peripherals/SaveSettings/: SaveLight.cpp  SaveRelay.cpp  SaveSoil.cpp  SaveTemphum.cpp  saveSettings.cpp
GHS/src/Threads/: CMakeLists.txt  Mutex.cpp  ThreadParameters.cpp  ThreadTasks.cpp  Threads.cpp
GHS/src/UI/: CMakeLists.txt  Display.cpp  MsgLogHandler.cpp  SSD1306_Library.cpp
GHSsrvr/: package-lock.json  package.json  server.js  test.js
GHSsrvr/Common/: socketCmds.js  timeMgr.js
GHSsrvr/clientJS/main/: main.client.js  main.js
GHSsrvr/config/: config.js
GHSsrvr/controllers/: heartbeat.js
GHSsrvr/controllers/devMgr/: config.devMgr.js  newDevice.js  newDevice.methods.js  sktHand.callbacks.js  sktHand.js
GHSsrvr/controllers/heartbeat/: heartbeat.js
GHSsrvr/controllers/logging/: devLog.js
GHSsrvr/controllers/main/: main.controller.js  pollData.controller.js
GHSsrvr/css/main/: main.css
GHSsrvr/routes/: main.route.js
GHSsrvr/startup/: startup.js
GHSsrvr/views/: dashboard.ejs  main.ejs
GreenHouseServer/: platformio.ini
GreenHouseServer/GHServerBU/: platformio.ini
GreenHouseServer/GHServerBU/include/: Network.h  OTAupdates.h
GreenHouseServer/GHServerBU/src/: Display.cpp  arduinoCom.cpp  eeprom.cpp  main.cpp
GreenHouseServer/include/: Config.h  Creds.h  Display.h  IDisplay.h  MsgLogHandler.h  Mutex.h  Network.h  NetworkManager.h  OTAupdates.h  Peripherals.h  Sensors.h  Threads.h  Timing.h  eeprom.h
GreenHouseServer/include/Common/: OTAupdates.h  Timing.h
GreenHouseServer/include/NVS/: NVS.h
GreenHouseServer/include/Network/: Creds.h  NetConfig.h  Network.h  NetworkMain.h  NetworkManager.h  NetworkSTA.h  NetworkWAP.h
GreenHouseServer/include/Peripherals/: Light.h  PeripheralMain.h  Relay.h  Soil.h  TempHum.h
GreenHouseServer/include/Threads/: Mutex.h  Threads.h
GreenHouseServer/include/UI/: Display.h  IDisplay.h  MsgLogHandler.h
GreenHouseServer/src/: Creds.cpp  Display.cpp  MsgLogHandler.cpp  Mutex.cpp  NetworkManager.cpp  OTAupdates.cpp  Peripherals.cpp  Programming.code-workspace  Threads.cpp  Timing.cpp  eeprom.cpp  main.cpp
GreenHouseServer/src/Common/: OTAupdates.cpp  Timing.cpp
GreenHouseServer/src/NVS/: NVS.cpp  NVSchecksum.cpp  NVSread.cpp  NVSwrite.cpp
GreenHouseServer/src/Network/: Creds.cpp  NetConfig.cpp  NetworkMain.cpp  NetworkManager.cpp  NetworkSTA.cpp  NetworkServers.cpp  NetworkSetup.cpp  NetworkWAP.cpp  Routes.cpp  webPages.cpp
GreenHouseServer/src/Peripherals/: Light.cpp  PeripheralMain.cpp  Relay.cpp  Soil.cpp  TempHum.cpp
GreenHouseServer/src/Threads/: Mutex.cpp  Threads.cpp
GreenHouseServer/src/UI/: Display.cpp  MsgLogHandler.cpp
TestESP/: platformio.ini
TestESP/include/NVS2/: NVS.hpp
TestESP/src/: main.cpp
TestESP/src/NVS2/: Checksum.cpp  NVS.cpp  NVSSafeOpen.cpp  NVSread.cpp  NVSwrite.cpp
greenhouse/: platformio.ini
greenhouse/data/: certificate.der  private_key.der
greenhouse/include/: Display.h  IDisplay.h  Network.h  OTAupdates.h  arduinoCom.h  eeprom.h
greenhouse/src/: Display.cpp  Network.cpp  OTAupdates.cpp  Timing.cpp  main.cpp
greenhouse/src/Network/: NetworkMain.cpp  (+2 more)
greenhouseSlave/: platformio.ini
greenhouseSlave/include/: espCom.h  sensors.h
greenhouseSlave/src/: espCom.cpp  main.cpp
(+22 files in other folders)
